// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> should change slider value 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  border: none;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  height: 3.2rem;
  font-size: 1.4rem;
  font-weight: 500;
  background-color: #3D485F;
  border: 0.8rem;
  padding: 0.4rem 3.2rem;
  border-radius: 1.6rem;
}

.c4:hover {
  background-color: #677489;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 27.6rem;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 27.6rem;
  margin-bottom: 3.2rem;
}

.c2 {
  line-height: 2.8rem;
  font-size: 1.6rem;
  font-weight: 400;
  color: #677489;
  margin-bottom: 1.2rem;
}

.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  outline: 0;
  height: 0.2rem;
  min-height: 0.2rem;
  border-radius: 0.1rem;
  background: linear-gradient( to right, #3F80FF 0%, #3F80FF 50%, #B9D1FF 50%, #B9D1FF 100% );
}

.c3::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #3F80FF;
}

.c3::-moz-range-thumb {
  -moz-appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #3F80FF;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      Crop
    </span>
    <input
      class="c3"
      data-testid="slider-input"
      max="2"
      min="1"
      step=".1"
      type="range"
      value="1.5"
    />
  </div>
  <button
    class="c4"
  >
    Save
  </button>
</div>
`;

exports[`<Slider /> should render slider as default 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  border: none;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  height: 3.2rem;
  font-size: 1.4rem;
  font-weight: 500;
  background-color: #3D485F;
  border: 0.8rem;
  padding: 0.4rem 3.2rem;
  border-radius: 1.6rem;
}

.c4:hover {
  background-color: #677489;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 27.6rem;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 27.6rem;
  margin-bottom: 3.2rem;
}

.c2 {
  line-height: 2.8rem;
  font-size: 1.6rem;
  font-weight: 400;
  color: #677489;
  margin-bottom: 1.2rem;
}

.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  outline: 0;
  height: 0.2rem;
  min-height: 0.2rem;
  border-radius: 0.1rem;
  background: linear-gradient( to right, #3F80FF 0%, #3F80FF 0%, #B9D1FF 0%, #B9D1FF 100% );
}

.c3::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #3F80FF;
}

.c3::-moz-range-thumb {
  -moz-appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #3F80FF;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      Crop
    </span>
    <input
      class="c3"
      data-testid="slider-input"
      max="2"
      min="1"
      step=".1"
      type="range"
      value="1"
    />
  </div>
  <button
    class="c4"
  >
    Save
  </button>
</div>
`;

exports[`<Slider /> should save image crop 1`] = `
.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
  border: none;
  -webkit-transition: background 0.3s ease-in-out;
  transition: background 0.3s ease-in-out;
  height: 3.2rem;
  font-size: 1.4rem;
  font-weight: 500;
  background-color: #3D485F;
  border: 0.8rem;
  padding: 0.4rem 3.2rem;
  border-radius: 1.6rem;
}

.c4:hover {
  background-color: #677489;
}

.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  max-width: 27.6rem;
}

.c1 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 27.6rem;
  margin-bottom: 3.2rem;
}

.c2 {
  line-height: 2.8rem;
  font-size: 1.6rem;
  font-weight: 400;
  color: #677489;
  margin-bottom: 1.2rem;
}

.c3 {
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  outline: 0;
  height: 0.2rem;
  min-height: 0.2rem;
  border-radius: 0.1rem;
  background: linear-gradient( to right, #3F80FF 0%, #3F80FF 50%, #B9D1FF 50%, #B9D1FF 100% );
}

.c3::-webkit-slider-thumb {
  -webkit-appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #3F80FF;
}

.c3::-moz-range-thumb {
  -moz-appearance: none;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background-color: #3F80FF;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <span
      class="c2"
    >
      Crop
    </span>
    <input
      class="c3"
      data-testid="slider-input"
      max="2"
      min="1"
      step=".1"
      type="range"
      value="1.5"
    />
  </div>
  <button
    class="c4"
  >
    Save
  </button>
</div>
`;
